Force termination of Kile when the main window is closed.

Under some circumstances the Kile process would still remain in memory otherwise.

BUG: 299569